# pyaestro

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: main.yml
pyaestro/: __init__.py
tests/structures/graphs/: conftest.py
