[project]
name = "pyaestro"
description = "A package of utilities structures for building workflows and workflow related tools."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Francesco Di Natale", email = "frank.dinatale1988@gmail.com" },
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "jsonschema>=4.26.0",
    "psutil>=7.2.1",
    "typing-extensions>=4.15.0",
]

# Build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "pyaestro/__init__.py"

[project.optional-dependencies]
dev = [
    "coverage>=7.13.1",
    "flake8>=7.3.0",
    "pre-commit>=4.5.1",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
